[gd_scene load_steps=13 format=3 uid="uid://ccmbej4hq3co6"]

[ext_resource type="Script" path="res://main_editor/bootsplash.gd" id="1_1yxp8"]
[ext_resource type="Theme" uid="uid://b3l700823f32o" path="res://theme/pixie_theme.tres" id="1_ig0il"]
[ext_resource type="Texture2D" uid="uid://btm65te1bst7g" path="res://theme/pixie_1.png" id="3_pdaeq"]
[ext_resource type="Texture2D" uid="uid://cuuynhg68qlm6" path="res://theme/pixie_2.png" id="4_ac4as"]
[ext_resource type="Texture2D" uid="uid://dcenej7x03u10" path="res://theme/pixie_3.png" id="5_a8y1d"]
[ext_resource type="Texture2D" uid="uid://btma3wxgu2u60" path="res://theme/pixie_4.png" id="6_x52gf"]
[ext_resource type="PackedScene" uid="uid://82qam4njvubr" path="res://main_editor/dialogs/pixiepopup.tscn" id="7_owkra"]

[sub_resource type="Animation" id="Animation_yvhp1"]
resource_name = "new user"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loading_updater2:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.396078, 0.866667, 0.0156863, 1), Color(0.596078, 0.74902, 0.952941, 1), Color(0.766069, 0.385788, 0.49543, 1), Color(0.816141, 0.715632, 0.650834, 1)]
}

[sub_resource type="Animation" id="Animation_6iqrq"]
resource_name = "splash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pixie:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pixie:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(391, 541), Vector2(550, 550)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(680, 308), Vector2(739, 308)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("subtitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("version:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ProgressBar:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 44), Vector2(445, 44)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ProgressBar:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.7, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("loading_updater2:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3s8g1"]
resource_name = "splash_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1cbou"]
_data = {
"new_user": SubResource("Animation_yvhp1"),
"splash": SubResource("Animation_6iqrq"),
"splash_out": SubResource("Animation_3s8g1")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_0ufil"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("3_pdaeq")
}, {
"duration": 1.0,
"texture": ExtResource("4_ac4as")
}, {
"duration": 1.0,
"texture": ExtResource("5_a8y1d")
}, {
"duration": 1.0,
"texture": ExtResource("6_x52gf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="bootsplash" type="Control"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig0il")
script = ExtResource("1_1yxp8")

[node name="title" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 13
layout_mode = 0
offset_left = 680.0
offset_top = 308.0
offset_right = 1188.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 200
text = "pixie"

[node name="subtitle" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 13
layout_mode = 0
offset_left = 877.0
offset_top = 537.0
offset_right = 1385.0
offset_bottom = 818.0
theme_override_font_sizes/font_size = 78
text = "editor"

[node name="version" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 13
layout_mode = 0
offset_left = 1116.0
offset_top = 603.0
offset_right = 1222.0
offset_bottom = 671.0
theme_override_font_sizes/font_size = 20
text = "version 1-a"

[node name="loading_updater" type="Label" parent="."]
z_index = 13
layout_mode = 0
offset_left = 750.0
offset_top = 703.0
offset_right = 1195.0
offset_bottom = 771.0
theme_override_colors/font_color = Color(0.0218565, 0.124458, 0.135683, 1)
theme_override_font_sizes/font_size = 20
text = "loading"
horizontal_alignment = 1

[node name="loading_updater2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 13
layout_mode = 0
offset_left = 750.0
offset_top = 732.0
offset_right = 1195.0
offset_bottom = 800.0
theme_override_colors/font_color = Color(0.396078, 0.866667, 0.0156863, 1)
theme_override_font_sizes/font_size = 20
text = "loading"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 7
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1081.0
color = Color(0.608442, 0.442223, 0.620198, 1)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1cbou")
}

[node name="pixie" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 8
position = Vector2(391, 541)
sprite_frames = SubResource("SpriteFrames_0ufil")
frame_progress = 0.87738

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 7
layout_mode = 0
offset_left = 749.0
offset_top = 651.0
offset_right = 750.0
offset_bottom = 695.0
theme = ExtResource("1_ig0il")
step = 1.0
page = 1.0
show_percentage = false

[node name="pixiepopup" parent="." instance=ExtResource("7_owkra")]
visible = false

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
